# snes_input_display

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: configuration.rs  controller.rs  input_viewer.rs  main.rs  skins.rs
src/configuration/: app_config.rs
src/controller/: button_state.rs  buttons_iter.rs  controller.rs  controller_addresses.rs  controller_impl.rs  pressed.rs
src/skins/: background.rs  button.rs  button_map.rs  skin.rs  theme.rs
test_files/skins/invalid1/: skin.xml
test_files/skins/valid1/: skin.xml
test_files/skins/valid2/: skin.xml
