[package]
name = "snes_input_display"
version = "0.3.4"
edition = "2021"
license = " GPL-3.0-or-later"

[profile.release]
codegen-units = 1 # Improves code generation at the cost of increased compile time.
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["overlapped-lists", "serialize"] }
dirs = "6"
ggez = "0.9"
rusb2snes = { path = "../rusb2snes", version = "^0.3.2"}

toml = "0.9"
